# kugelaudio

./: .gitignore  LICENSE  README.md  pyproject.toml  start.py
examples/: basic_generation.py  voice_cloning.py
src/kugelaudio_open/: __init__.py  cli.py
src/kugelaudio_open/configs/: __init__.py  kugelaudio_1.5b.json  kugelaudio_7b.json  model_config.py
src/kugelaudio_open/models/: __init__.py  conv_layers.py  diffusion_head.py  kugelaudio_inference.py  kugelaudio_model.py  tokenizer.py
src/kugelaudio_open/processors/: __init__.py  audio_processor.py  kugelaudio_processor.py  text_tokenizer.py
src/kugelaudio_open/schedule/: __init__.py  dpm_solver.py
src/kugelaudio_open/ui/: __init__.py  __main__.py  app.py
src/kugelaudio_open/utils/: __init__.py  generation.py
src/kugelaudio_open/watermark/: __init__.py  watermark.py
